--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-   <div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + TS</title>
+</head>
+
+<body>
+  <div>
     <h1 class="logo">SpotiHox</h1>
-    
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Search</a></li>
-        <li><a href="">Favorite</a></li>
-      </ul>
-    
+
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">Search</a></li>
+      <li><a href="">Favorite</a></li>
+    </ul>
+
 
     <h3>PLAYLISTS</h3>
 
@@ -29,21 +32,22 @@
       <li><a href="">Jazz</a></li>
 
     </ul>
-   </div>
+  </div>
 
-   <main>
-    <div id="songs">  
+  <main>
+    <div id="songs">
       <div>
-        <img src="https://github.com/lucas-santosP/clone-spotify-web-react/raw/master/src/assets/demo-preview.png" alt=""
-        width="250px">
+        <img src="https://github.com/lucas-santosP/clone-spotify-web-react/raw/master/src/assets/demo-preview.png"
+          alt="" width="250px">
         <h2>Party</h2>
         <h3>Kida</h3>
         <span class="material-symbols-outlined">
           favorite
-          </span>
+        </span>
       </div>
     </div>
-   </main>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+  </main>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
