--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + TS</title>
+  <title>Spoti Hox</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 
     <h3>PLAYLISTS</h3>
 
-    <ul>
+    <!-- <ul>
       <li><a href="">Rock</a></li>
       <li><a href="">Pop</a></li>
       <li><a href="">Hip Hop</a></li>
@@ -46,12 +46,12 @@
       <li><a href="">Latine</a></li>
       <li><a href="">Jazz</a></li>
 
-    </ul>
+    </ul> -->
   </div>
 
   <main>
     <div id="songs">
-      <div>
+      <!-- <div>
         <img src="https://github.com/lucas-santosP/clone-spotify-web-react/raw/master/src/assets/demo-preview.png"
           alt="" width="250px">
         <h2>Party</h2>
@@ -59,7 +59,7 @@
         <span class="material-symbols-outlined">
           favorite
         </span>
-      </div>
+      </div> -->
     </div>
   </main>
   <script type="module" src="/src/main.ts"></script>
