--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- <head>
+<!-- <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,46 +22,53 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spoti Hox</title>
+  <title>Vite + TS</title>
 </head>
 
 <body>
-  <div>
-    <h1 class="logo">SpotiHox</h1>
+  <div class="container">
+    <div class="left-side">
+      <h1 class="logo">SpotiHox</h1>
 
-    <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">Search</a></li>
-      <li><a href="">Favorite</a></li>
-    </ul>
+      <ul class="first-list">
+        <li class="first-item"><a href="">Home</a></li>
+        <li class="first-item"><a href="">Search</a></li>
+        <li class="first-item"><a href="">Favorite</a></li>
+      </ul>
 
 
-    <h3>PLAYLISTS</h3>
+      <h3 class="playlists">PLAYLISTS</h3>
 
-    <!-- <ul>
-      <li><a href="">Rock</a></li>
-      <li><a href="">Pop</a></li>
-      <li><a href="">Hip Hop</a></li>
-      <li><a href="">Folk</a></li>
-      <li><a href="">Latine</a></li>
-      <li><a href="">Jazz</a></li>
+      <ul class="songs-playlists">
+        <li class="song-genre"><a href="">Rock</a></li>
+        <li class="song-genre"><a href="">Pop</a></li>
+        <li class="song-genre"><a href="">Hip Hop</a></li>
+        <li class="song-genre"><a href="">Folk</a></li>
+        <li class="song-genre"><a href="">Latine</a></li>
+        <li class="song-genre"><a href="">Jazz</a></li>
 
-    </ul> -->
-  </div>
-
-  <main>
-    <div id="songs">
-      <!-- <div>
-        <img src="https://github.com/lucas-santosP/clone-spotify-web-react/raw/master/src/assets/demo-preview.png"
-          alt="" width="250px">
-        <h2>Party</h2>
-        <h3>Kida</h3>
-        <span class="material-symbols-outlined">
-          favorite
-        </span>
-      </div> -->
+      </ul>
     </div>
-  </main>
+
+    <div>
+      <h3 style="margin: 4rem 1rem 1rem ; color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; ">
+        Recently played
+      </h3>
+  
+      <div id="songs">
+        <!-- <div>
+  
+          <img src="https://github.com/lucas-santosP/clone-spotify-web-react/raw/master/src/assets/demo-preview.png"
+            alt="" width="250px">
+          <h2>Party</h2>
+          <h3>Kida</h3>
+          <span class="material-symbols-outlined">
+            favorite
+          </span>
+        </div> -->
+      </div>
+    </div>
+  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
