--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     </div>
 
     <div>
+      <div style="width: 50%; margin: auto;">
+        <input type="search" placeholder="search..." class="search">
+      </div>
+
       <h3 style="margin: 4rem 1rem 1rem ; color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; ">
         Recently played
       </h3>
