--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
 
     <ul>
       <li><a href="">Home</a></li>
-      <li><a href="">Search</a></li>
+     
+
+      <li><a id="search" href="">Search</a></li>
+
+
       <li><a href="">Favorite</a></li>
     </ul>
-
+    
 
     <h3>PLAYLISTS</h3>
 
