--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         Recently played
       </h3>
   
+      <div class="single-song">
+
+      </div>
+
       <div id="songs">
         <!-- <div>
   
