--- a/index.html
+++ b/index.html
@@ -1,93 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music app</title>
-  </head>
-  <body>
-    <div id="app"></div>
-
-
-
-
-    <script type="module" src="/src/main.ts"></script>
-  </body>
-</html> -->
-
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + TS</title>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Vite + TS</title>
 </head>
 
 <body>
-  <div class="container">
+<div class="container">
     <div class="left-side">
-      <h1 class="logo">SpotiHox</h1>
+        <h1 class="logo">SpotiHox</h1>
 
-    <ul>
-      <li><a href="">Home</a></li>
-     
-
-      <li><a id="search" href="">Search</a></li>
-
-
-      <li><a href="">Favorite</a></li>
-    </ul>
-    
-      <ul class="first-list">
-        <li class="first-item"><a href="">Home</a></li>
-        <li class="first-item"><a href="">Search</a></li>
-        <li class="first-item"><a href="">Favorite</a></li>
-      </ul>
+        <ul class="first-list">
+            <li class="first-item"><a href="/" style="color: rgb(219, 217, 217); text-decoration: none">Home</a></li>
+            <li class="first-item">Search</li>
+            <li class="first-item" id="favorite-btn">Favorite</li>
+        </ul>
 
 
-      <h3 class="playlists">PLAYLISTS</h3>
+        <h3 class="playlists">PLAYLISTS</h3>
 
-      <ul class="songs-playlists">
-        <li class="song-genre"><a href="">Rock</a></li>
-        <li class="song-genre"><a href="">Pop</a></li>
-        <li class="song-genre"><a href="">Hip Hop</a></li>
-        <li class="song-genre"><a href="">Folk</a></li>
-        <li class="song-genre"><a href="">Latine</a></li>
-        <li class="song-genre"><a href="">Jazz</a></li>
-
-      </ul>
+        <ul class="songs-playlists">
+        </ul>
     </div>
 
     <div>
-      <div style="width: 50%; margin: auto;">
-        <input type="search" placeholder="search..." class="search">
-      </div>
+        <div style="width: 50%; margin: auto;">
+            <input type="search" placeholder="search..." class="search" id="search-input">
+        </div>
 
-      <h3 style="margin: 4rem 1rem 1rem ; color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; ">
-        Recently played
-      </h3>
-  
-      <div class="single-song">
+        <h3 style="margin: 4rem 1rem 1rem ; color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; display: none" id="page-sub">
+            Recently played
+        </h3>
 
-      </div>
+        <button id="go-back-btn">
+            Go back
+        </button>
 
-      <div id="songs">
-        <!-- <div>
-  
-          <img src="https://github.com/lucas-santosP/clone-spotify-web-react/raw/master/src/assets/demo-preview.png"
-            alt="" width="250px">
-          <h2>Party</h2>
-          <h3>Kida</h3>
-          <span class="material-symbols-outlined">
-            favorite
-          </span>
-        </div> -->
-      </div>
+        <div class="songs-container" id="songs"></div>
+
+        <div class="single-song" id="single-song"></div>
+
+        <div class="songs-controls" id="song-controls">
+            <audio id="audio" autoplay></audio>
+
+            <div class="back-btn" id="back-btn">
+                <span class="material-symbols-outlined controls">
+                  arrow_back
+                </span>
+            </div>
+
+            <div class="play-btn" id="play-btn">
+              <span class="material-symbols-outlined controls">
+                play_arrow
+              </span>
+            </div>
+
+            <div class="pause-btn" id="pause-btn">
+              <span class="material-symbols-outlined controls">
+                pause
+              </span>
+            </div>
+
+            <div class="next-btn" id="next-btn">
+                  <span class="material-symbols-outlined controls">
+                arrow_forward
+                </span>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="module" src="/src/main.ts"></script>
+</div>
+<script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
