--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
       <div class="single-song">
 
       </div>
-
+    
+      <!-- <button id="play"></button> -->
       <div id="songs">
         <!-- <div>
   
@@ -87,7 +88,18 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
 
-</html>
+  
+
+ 
+
+
+
+
+
+
+
+  <script type="module" src="/src/main.ts"></script>
+    
+  </body>
+  </html>
