--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Recently played
         </h3>
 
-        <button id="go-back-btn">
+        <button class="go-back-btn" id="go-back-btn">
             Go back
         </button>
 
