--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="logo">SpotiHox</h1>
 
         <ul class="first-list">
-            <li class="first-item"><a href="/" style="color: rgb(219, 217, 217); text-decoration: none">Home</a></li>
+            <li class="first-item"><a href="" style="color: rgb(219, 217, 217); text-decoration: none">Home</a></li>
             <li class="first-item">Search</li>
             <li class="first-item" id="favorite-btn">Favorite</li>
         </ul>
